--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,9 +1,22 @@
+.column {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.button {
+  background-color: blue;
+  border-radius: 5px;
+  margin-top: 10vh;
+  height: 4vh;
+  width: 20vw;
+}
 .row {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 .tokentitleTextstyle {
   color: white;
